# post-box-express

./: .env  .loop-status.json  ATIVAR-LOOP-NOITE.sh  BLOQUEADORES-USER-ACTIONS.md  GLOBAL_FILTER_INTEGRATION.md  MANUTENCAO.md  MOBILE_IMPROVEMENTS.md  PM-SESSION-STATUS-2026-06-25.md  RESUMO-PARA-AMANHA.md  SUPABASE-LOCAL-QUICK-START.md  TESTE_MOBILE_MANUAL.md  TESTING_FILTERS.md  TEST_RESULTS.md  VALIDACAO_OAUTH_FIX.md  create-table.mjs  docker-compose.minimal.yml  docker-compose.ultra-simple.yml  docker-compose.yml  insert_test_account.mjs  package.json  start-all.sh  test-persistente.mjs  vite.config.ts
.lovable/: plan.md
docs/: INDEX-PRD-EPICS-2026-06-25.md  INSTAGRAM_MONITORING_FASE2.md  README-QUICK-START-MVP.md  SUPABASE-LOCAL-SETUP.md  TYPESCRIPT-ERRORS-QUICK-MAP.md  typescript-errors-analysis.md
docs/aios/: PRD.md  README.md
docs/epics/: EPIC-01-typescript-compliance.md  EPIC-02-auth-session.md  EPIC-03-core-routes.md  EPIC-04-post-creation-approval.md  EPIC-07-perf-a11y.md  (+3 more)
mcp-meta-gama/: .env.example  .gitignore  README.md  REVIEW_NEEDED.md  pyproject.toml  requirements.txt  test_graph_client.py  test_publish.py  test_token_store.py  test_tools.py
mcp-meta-gama/mcp_meta_gama/: __init__.py  __main__.py  graph_client.py  server.py  token_store.py
mcp-meta-gama/mcp_meta_gama/tools/: __init__.py  accounts.py  comments.py  insights.py  limits.py  publish.py
scripts/: setup-supabase-local.sh
server/: .env.example  apply-migration.mjs  create-instagram-auth-links.mjs  package.json
src/: routeTree.gen.ts  styles.css
supabase/: config.toml  nginx.conf
(+119 files in other folders)
